--- a/ContactMe.html
+++ b/ContactMe.html
@@ -7,8 +7,7 @@
   <body>
     <h1>Contact Details:</h1>
     <p>
-      <h2>Phone No:</h2>&nbsp;<h3>8777765107</h3>
-      <h2>Email:</h2>&nbsp;<h3>Pradyutnathradhae@gmail.com</h3>
+    <h2><strong>Phone No:</strong></h2>&nbsp;<h3>8777765107</h3>
     </p>
     <form action="mailto:pradyutnathradhae@gmail.com" method="post" enctype="text/plain">
       <label>Your Name</label>
