--- a/ContactMe.html
+++ b/ContactMe.html
@@ -10,13 +10,25 @@
     <h2><strong>Phone No:</strong></h2>&nbsp;<h3>8777765107</h3>
     </p>
     <form action="mailto:pradyutnathradhae@gmail.com" method="post" enctype="text/plain">
-      <label>Your Name</label>
-      <input type="text" name="YourName" value=""><br>
-      <label>Email:-</label>
-      <input type="email" name="YourEmail" value=""><br>
-      <label>Your Message::</label>
-      <textarea name="YourMessage" rows="20" cols="30"></textarea>
-      <input type="submit" name="">
+      <table cellspacing="30px">
+          <tr>
+            <td>
+            <label>Your Name</label></td>
+            <td>
+            <input type="text" name="YourName" value=""></td>
+          </tr>
+          <tr>
+            <td><label>Email:-</label></td>
+            <td><input type="email" name="YourEmail" value="" required></td>
+          </tr>
+          <tr>
+            <td><label>Your Message::</label></td>
+            <td><textarea name="YourMessage" rows="8" cols="30"></textarea></td>
+          </tr>
+            <tr><td>
+              <input type="submit" name=""></td>
+            </tr>
+       </table>
 
     </form>
   </body>
