Added background color to body

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <meta name="author" content="Pradyut Nath">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>😇Pradyut Rocks😈</title>
+  <style>
+        body{
+          background-color: #EAF6F6;
+        }
+  </style>
 </head>
 
 <body>
