--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
         body{
           background-color: #EAF6F6;
         }
+        hr{
+          border-color: inherit;
+          border-style: none;
+          border-top-style: dotted;
+          border-width: 5px;
+          width: 5%;
+          border-color: grey;
+        }
   </style>
 </head>
 
@@ -31,7 +39,7 @@
     </tr>
   </table>
 
-  <hr size="4" noshade />
+  <hr>
   <p><h3>Books On Watching List::</h3>
       <ul>
         <li>Java Complete Reference</li>
