Done External CSS

--- a/ContactMe.html
+++ b/ContactMe.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Me</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <h1>Contact Details:</h1>
-    <p>
-    <h2><strong>Phone No:</strong></h2>&nbsp;<h3>8777765107</h3>
-    </p>
+    <br />
+    <h2><strong>Phone No:</strong></h2>&nbsp;<h3>8777******</h3>
+    <br />
     <form action="mailto:pradyutnathradhae@gmail.com" method="post" enctype="text/plain">
       <table cellspacing="30px">
           <tr>
