--- a/index.html
+++ b/index.html
@@ -8,26 +8,14 @@
   <meta name="author" content="Pradyut Nath">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>😇Pradyut Rocks😈</title>
-  <style>
-        body{
-          background-color: #EAF6F6;
-        }
-        hr{
-          border-color: inherit;
-          border-style: none;
-          border-top-style: dotted;
-          border-width: 5px;
-          width: 5%;
-          border-color: grey;
-        }
-  </style>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
   <table cellspacing="25" >
     <tr>
       <td>
-        <img src="https://0.academia-photos.com/26906640/7528765/8455207/s200_pradyut.nath.jpg" alt="Me with my friends">
+        <img src="images/Mainpic.jpg" alt="Me with my friends">
       </td>
       <td>
         <h1>Pradyut Nath</h1>
