Adding styling to mainimage

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <table cellspacing="25" >
     <tr>
       <td>
-        <img src="images/Mainpic.jpg" alt="Me with my friends">
+        <img src="images/Mainpic.jpg" class = "main_img" alt="Me with my friends">
       </td>
       <td>
         <h1>Pradyut Nath</h1>
